--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,12 @@ scala:
 
 jdk: oraclejdk8
 
+script:
+  - sbt clean coverage test
+  - sbt coverageReport
+  - sbt coverageAggregate
+  - sbt codacyCoverage
+
 cache:
   directories:
     - $HOME/.m2/repository
