Split TravisCI build in different phases
- This change is done in order to avoid 10-minute timeouts, because each
  phase will report to Travis its completion, so 'sbt test' will have more
  time to complete before timeout.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,11 @@ scala:
 
 jdk: oraclejdk8
 
+script:
+   - sbt compile
+   - sbt test:compile
+   - sbt test
+
 cache:
   directories:
     - $HOME/.m2/repository
